# fund-analysis

./: .gitignore  README.md  app.py  pyproject.toml
fund_analysis/: __init__.py  charts.py  db.py  export.py  fetcher.py  metrics.py
tests/: test_metrics.py
