[project]
name = "fund-analysis"
version = "0.1.0"
description = "轻量级基金业绩分析工具 — 数据导入、指标计算、图表展示、Excel 报告导出"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28",
    "akshare>=1.12",
    "pandas>=2.0",
    "plotly>=5.17",
    "openpyxl>=3.1",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["fund_analysis*"]
